[package]
name = "ktls-core"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
description = """
Abstraction for implementing Linux kernel TLS (kTLS) offload in Rust.
"""
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[package.metadata.docs.rs]
features = ["probe-ktls-compatibility", "shim-rustls"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitfield-struct = { workspace = true }
libc = { workspace = true, features = ["const-extern-fn"] }
log = { workspace = true, optional = true }
nix = { workspace = true, features = ["socket", "uio", "net"] }
rustls = { workspace = true, default-features = false, optional = true }
tracing = { workspace = true, optional = true }
zeroize = { workspace = true }
zeroize_derive = { workspace = true }

[features]
# Logging support with `log` crate
log = ["dep:log"]

# Logging support with `tracing` crate
tracing = ["dep:tracing"]

# Enable kernel TLS support probe utilities
probe-ktls-compatibility = []

# Shim layer for `rustls` crate
shim-rustls = ["dep:rustls"]

[lints]
workspace = true
