[package]
name = "ktls-stream"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
ktls-core = { path = "../ktls-core" }
log = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
tokio = { workspace = true, features = ["net"], optional = true }
tracing = { workspace = true, optional = true }

[features]
default = ["async-io-tokio"]

# Asynchronous I/O support via Tokio.
async-io-tokio = ["dep:tokio"]

# Logging support with `log` crate
log = ["dep:log", "ktls-core/log"]

# Logging support with `tracing` crate
tracing = ["dep:tracing", "ktls-core/tracing"]

[lints]
workspace = true
