[package]
name = "ktls-stream"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
description = """
`Stream` abstraction for implementing Linux kernel TLS (kTLS) offload.
"""
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[package.metadata.docs.rs]
features = ["tls13-key-update", "shim-rustls"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ktls-core = { version = "=0.0.3", path = "../ktls-core" }
log = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
rustls = { workspace = true, default-features = false, optional = true }
tokio = { workspace = true, features = ["net"], optional = true }
tracing = { workspace = true, optional = true }

[features]
default = ["async-io-tokio"]

# Asynchronous I/O support via Tokio.
async-io-tokio = ["dep:tokio"]

# Logging support with `log` crate
log = ["dep:log", "ktls-core/log"]

# Logging support with `tracing` crate
tracing = ["dep:tracing", "ktls-core/tracing"]

# Enable TLS 1.3 key update support
tls13-key-update = ["ktls-core/tls13-key-update"]

# Shim layer for `rustls` crate
shim-rustls = ["dep:rustls", "ktls-core/shim-rustls"]

[lints]
workspace = true
