[package]
name = "ktls-tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "ktls-example-server"
path = "bin/server.rs"

[[bin]]
name = "ktls-test-echo"
path = "bin/echo.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.48", features = ["derive"] }
ktls-core = { path = "../ktls-core", features = ["shim-rustls", "tracing", "probe-ktls-compatibility"] }
ktls-stream = { path = "../ktls-stream", features = ["shim-rustls", "tracing"] }
rand = "0.9.2"
rcgen = "0.14.5"
rustls = { workspace = true, default-features = false, features = ["std", "tls12", "ring", "log"] }
thiserror = "2.0"
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["early-data", "ring", "tls12", "logging"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "parking_lot"] }

[dev-dependencies]
test-case = "3.3"

[lints]
workspace = true
